Fix SQLAlchemy version and prepare for Render

--- a/web/templates/contact.html
+++ b/web/templates/contact.html
@@ -15,7 +15,8 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='responsive.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/mobile-optimizations.css') }}">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/universal-compatibility.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/bottom-navigation.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/fixed-bottom-nav.css') }}">
 </head>
 <body>
   <!-- شريط الإعلانات -->
