--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -109,8 +109,8 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/translation.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='responsive.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/mobile-optimizations.css') }}">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/universal-compatibility.css') }}">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/advanced-responsive.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/bottom-navigation.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/fixed-bottom-nav.css') }}">
 
   <style>
     * {
@@ -4079,6 +4079,9 @@
   
   <!-- تحسينات الأجهزة -->
   <script src="{{ url_for('static', filename='js/device-optimization.js') }}"></script>
+  
+  <!-- تحسينات شريط التنقل السفلي -->
+  <script src="{{ url_for('static', filename='js/bottom-navigation.js') }}"></script>
   <script>
     // إضافة زر تغيير اللغة إلى الصفحة
     document.addEventListener('DOMContentLoaded', function() {
