--- a/web/templates/product_detail.html
+++ b/web/templates/product_detail.html
@@ -18,6 +18,9 @@
   <link rel="stylesheet" href="/static/style.css">
   <link rel="stylesheet" href="/static/css/translation.css">
   <link rel="stylesheet" href="/static/responsive.css">
+  <link rel="stylesheet" href="/static/css/mobile-optimizations.css">
+  <link rel="stylesheet" href="/static/css/bottom-navigation.css">
+  <link rel="stylesheet" href="/static/css/fixed-bottom-nav.css">
   
   <style>
     /* تصميم صفحة تفاصيل المنتج */
