--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -111,6 +111,8 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/mobile-optimizations.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/bottom-navigation.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/fixed-bottom-nav.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/force-bottom-nav.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/moving-bottom-nav.css') }}">
 
   <style>
     * {
@@ -4082,6 +4084,7 @@
   
   <!-- تحسينات شريط التنقل السفلي -->
   <script src="{{ url_for('static', filename='js/bottom-navigation.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/moving-bottom-nav.js') }}"></script>
   <script>
     // إضافة زر تغيير اللغة إلى الصفحة
     document.addEventListener('DOMContentLoaded', function() {
